# wishub

./: .env  .gitignore  README.md  main.py  pyproject.toml
.claude/: agent-collaboration.md  prompt-templates.md
.claude/agents/: backend.md  dev.md  frontend.md  pm.md  qa.md  tech-lead.md  ued.md
.trae/: agent-collaboration.md  prompt-templates.md
.trae/agents/: full-stack.md  pm.md  qa.md  tech-lead.md
backend/: main.py  pyproject.toml
backend/application/commandsvc/: process_document.py  upload_markdown_document.py
backend/application/querysvc/: ask_knowledge_question.py  list_documents.py
backend/domain/domainsvc/: data_spliter.py  embedding.py  llm_service.py
backend/domain/knowledge/: entities.py
backend/domain/retrieval/: services.py
backend/infra/: service_factory.py
backend/infra/llm/: embedding_service.py  evidence_bound_llm_service.py  llm_service_openai.py  test_llm_service_openai.py
backend/infra/persistence/: document_repository.py  llm_log_repository.py
backend/infra/spliter/: langchain_spliter.py  markdown_spliter.py
backend/infra/storage/: local_file_storage.py
backend/infra/vectordb/: __init__.py  chromadb_embedding_service.py  chromadb_embedding_service_test.py
backend/interface/api/v1/: documents.py  knowledge_base.py  llm_logs.py  qa.py
backend/shared/: config.py  errors.py
backend/tests/: test_mvp_api.py
database/vector_db/: chroma.sqlite3
docs/: architecture-ddd-rag.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: wishub-mvp.spec.ts
frontend/src/: App.tsx  api.ts  (+2 more)
(+14 files in other folders)
