[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.4.24,<0.5.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0,<2.0.0",
    "onnxruntime>=1.16.0,<1.20.0",
    "openai>=1.0.0",
    "pydantic>=2.7.0",
    "pulsar-client>=3.3.0,<3.6.0",
    "pytest>=8.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]
